auth moved to separate app. endpoints typed via openAPI-typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "noUncheckedIndexedAccess": true,
         "types": ["bun-types"],
         "esModuleInterop": true,
+        "verbatimModuleSyntax": true,
         "allowJs": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
