--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
+  "name": "gohighlevel-api",
+  "private": true,
+  "version": "1.0.0",
+  "license": "Apache-2.0",
+  "description": "HighLevel API",
+  "main": "src/index.ts",
+  "type": "module",
+  "scripts": {
+    "build": "bun run scripts/generate-types.ts",
+    "dev": "bun run src/auth.ts"
+  },
   "dependencies": {
+    "nanostores": "^0.9.4",
     "openapi-fetch": "^0.7.10"
   },
   "devDependencies": {
-    "bun-types": "^1.0.6",
+    "bun-types": "^1.0.10",
     "openapi-typescript": "7.0.0-next.2"
   }
 }
