feat(client): Update LocationsClient and refactor auth and scopes
- Update LocationsClient to use new HighLevelConfig import path
- Refactor auth/index.tsx to improve imports and component usage
- Refactor scopes.ts for better readability and type safety
- Remove unused files and update file paths across the project
- Fix various formatting and syntax issues in TypeScript files
- Add authUrl method to OauthClient for generating authorization URLs

BREAKING CHANGE: Removal of 'base.ts' and update of import paths may require changes in dependent modules.

--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,12 @@
     "organizeImports": {
         "enabled": true
     },
+    "javascript": {
+        "formatter": {
+            "semicolons": "asNeeded",
+            "quoteStyle": "single"
+        }
+    },
     "linter": {
         "enabled": true,
         "rules": {
