--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "highlevel-api",
-  "private": true,
-  "version": "1.0.0",
-  "license": "Apache-2.0",
-  "description": "SDK for HighLevel API in typescript.",
-  "main": "dist/main.js",
-  "exports": {
-    ".": "./dist/client/index.js",
-    "./types": "./dist/api/types/index.d.ts",
-    "./auth": "./dist/auth/index.js"
-  },
-  "type": "module",
-  "scripts": {
-    "generate:api": "bun scripts/build-api.ts -- generate",
-    "generate:client": "bun scripts/build-client.ts",
-    "generate:scopes": "bun scripts/build-scopes.ts",
-    "generate:all": "bun run generate:api && bun run generate:client && bun run generate:scopes && bun run package",
-    "package": "tsc -p tsconfig.build.json",
-    "auth": "bun --hot run src/auth/index.tsx",
-    "test": "bun test --watch"
-  },
-  "dependencies": {
-    "@gnosticdev/cool-console": "link:@gnosticdev/cool-console",
-    "crawlee": "^3.6.1",
-    "hono": "^3.10.2",
-    "json-diff-ts": "^2.2.1",
-    "nanostores": "^0.9.4",
-    "playwright": "^1.40.0",
-    "tsx": "^4.1.3",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
-    "@biomejs/biome": "^1.4.1",
-    "@redocly/cli": "latest",
-    "@types/js-yaml": "^4.0.9",
-    "bun-types": "^1.0.15",
-    "js-yaml": "^4.1.0",
-    "openapi-fetch": "^0.8.1",
-    "openapi-typescript": "7.0.0-next.2",
-    "typescript": "^5.2.2"
-  }
+    "name": "highlevel-api-sdk",
+    "private": true,
+    "version": "1.0.0",
+    "license": "Apache-2.0",
+    "description": "SDK for HighLevel API in typescript.",
+    "main": "dist/main.js",
+    "exports": {
+        ".": "./dist/client/index.js",
+        "./types": "./dist/api/types/index.d.ts"
+    },
+    "type": "module",
+    "scripts": {
+        "generate:api": "bun scripts/build-api.ts -- generate",
+        "generate:client": "bun scripts/build-client.ts",
+        "generate:scopes": "bun scripts/build-scopes.ts",
+        "build": "bun run generate:client && bun run package",
+        "package": "tsc -p tsconfig.build.json",
+        "auth": "bun --hot run src/auth/index.tsx",
+        "test": "bun test --watch"
+    },
+    "dependencies": {
+        "@gnosticdev/cool-console": "link:@gnosticdev/cool-console",
+        "crawlee": "^3.6.1",
+        "hono": "^3.10.2",
+        "json-diff-ts": "^2.2.1",
+        "nanostores": "^0.9.4",
+        "playwright": "^1.40.0",
+        "tsx": "^4.1.3",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@apidevtools/swagger-parser": "^10.1.0",
+        "@biomejs/biome": "^1.4.1",
+        "@redocly/cli": "latest",
+        "@types/js-yaml": "^4.0.9",
+        "bun-types": "^1.0.15",
+        "js-yaml": "^4.1.0",
+        "openapi-fetch": "^0.8.1",
+        "openapi-typescript": "7.0.0-next.2",
+        "typescript": "^5.2.2"
+    }
 }
