--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,8 +6,8 @@
         "noEmit": false,
         "outDir": "./dist",
         "declaration": true,
-        "rootDirs": ["./src/api/types", "./src/api/schemas", "./src/client"],
-        "rootDir": "./src/"
+        "rootDirs": ["./src/schema/types", "./src/client"],
+        "rootDir": "./src"
     },
     "include": ["./src/schema/types/**/*.ts", "./src/client/*.ts"],
     "exclude": ["./src/lib/**/*"]
