--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "main": "dist/main.js",
     "exports": {
         ".": "./dist/client/index.js",
-        "./types": "./dist/api/types/index.d.ts"
+        "./types": "./dist/schema/types/index.d.ts"
     },
     "type": "module",
     "scripts": {
@@ -21,12 +21,8 @@
     },
     "dependencies": {
         "@gnosticdev/cool-console": "link:@gnosticdev/cool-console",
-        "crawlee": "^3.6.1",
         "hono": "^3.10.2",
         "json-diff-ts": "^2.2.1",
-        "nanostores": "^0.9.4",
-        "playwright": "^1.40.0",
-        "tsx": "^4.1.3",
         "zod": "^3.22.4"
     },
     "devDependencies": {
