feat(auth): integrate SQLite for token storage and refine OAuth flow
- Implement SQLite database integration for token storage and retrieval.
- Refactor OAuth flow to include token exchange and storage logic.
- Update `LocationsClient` to support bearer token authorization and improve error handling.
- Enhance UI components for better user feedback during the authorization process.
- Adjust project configuration and scripts for consistency and efficiency.
- Remove unused scripts and dependencies to clean up the project structure.

--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,27 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-    "organizeImports": {
-        "enabled": true
+    "$schema": "https://biomejs.dev/schemas/1.5.2/schema.json",
+    "files": {
+        "ignore": ["node_modules", "**/_![__tests__]*.ts"],
+        "include": [
+            "src/**/*.{ts|js|json}",
+            "__tests__/**/*.ts",
+            "./*.{ts|js|json}"
+        ]
+    },
+    "formatter": {
+        "enabled": true,
+        "formatWithErrors": true
     },
     "javascript": {
         "formatter": {
-            "semicolons": "asNeeded",
-            "quoteStyle": "single"
+            "quoteStyle": "single",
+            "semicolons": "asNeeded"
+        }
+    },
+    "json": {
+        "parser": {
+            "allowComments": true,
+            "allowTrailingCommas": false
         }
     },
     "linter": {
@@ -16,7 +31,9 @@
             "style": {
                 "noNonNullAssertion": "off"
             }
-        },
-        "ignore": ["node_modules"]
+        }
+    },
+    "organizeImports": {
+        "enabled": true
     }
 }
