--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,13 @@
         "jsx": "react-jsx",
         "jsxImportSource": "hono/jsx",
         "target": "ESNext",
+        "lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
         "module": "ESNext",
         "strict": true,
         "noEmit": true,
         "moduleResolution": "Bundler",
         "moduleDetection": "force",
         "noUncheckedIndexedAccess": true,
-        "types": ["bun-types"],
-        "esModuleInterop": true,
         "skipDefaultLibCheck": true,
         "verbatimModuleSyntax": true,
         "allowJs": true,
