--- a/biome.json
+++ b/biome.json
@@ -1,39 +1,104 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.5.2/schema.json",
-    "files": {
-        "ignore": ["node_modules", "**/_![__tests__]*.ts"],
-        "include": [
-            "src/**/*.{ts|js|json}",
-            "__tests__/**/*.ts",
-            "./*.{ts|js|json}"
-        ]
-    },
-    "formatter": {
-        "enabled": true,
-        "formatWithErrors": true
-    },
-    "javascript": {
-        "formatter": {
-            "quoteStyle": "single",
-            "semicolons": "asNeeded"
-        }
-    },
-    "json": {
-        "parser": {
-            "allowComments": true,
-            "allowTrailingCommas": false
-        }
-    },
-    "linter": {
-        "enabled": true,
-        "rules": {
-            "recommended": true,
-            "style": {
-                "noNonNullAssertion": "off"
-            }
-        }
-    },
-    "organizeImports": {
-        "enabled": true
-    }
+	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+
+	"files": {
+		"ignore": [
+			"node_modules",
+			"**/_![__tests__]",
+			"dist",
+			".wrangler",
+			".astro",
+			".vscode"
+		],
+		"include": ["**/*[.js,.jsx,.ts,.tsx,.astro,.css,.json,.jsonc]"]
+	},
+	"formatter": {
+		"enabled": true,
+		"formatWithErrors": true
+	},
+	"javascript": {
+		"formatter": {
+			"quoteStyle": "single",
+			"semicolons": "asNeeded",
+			"jsxQuoteStyle": "single"
+		},
+		"globals": ["Astro"]
+	},
+	"json": {
+		"parser": {
+			"allowComments": true,
+			"allowTrailingCommas": false
+		}
+	},
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"defaultBranch": "main",
+		"useIgnoreFile": true
+	},
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"recommended": true,
+			"style": {
+				"noNonNullAssertion": "off"
+			},
+			"a11y": {
+				"useMediaCaption": "off"
+			},
+			"nursery": {
+				"useSortedClasses": "warn",
+				"noDuplicateJsonKeys": "warn",
+				"recommended": true
+			},
+			"correctness": { "useJsxKeyInIterable": "off" }
+		}
+	},
+	"organizeImports": {
+		"enabled": true
+	},
+	"css": {
+		"formatter": {
+			"enabled": true
+		}
+	},
+	"overrides": [
+		{
+			"include": ["./**/*.js"],
+			"linter": {
+				"enabled": false
+			}
+		},
+		{
+			"include": ["./**/*.astro"],
+			"formatter": {
+				"indentWidth": 2,
+				"indentStyle": "space",
+				"formatWithErrors": true,
+				"enabled": true,
+				"lineWidth": 120,
+				"attributePosition": "multiline"
+			},
+			"linter": {
+				"enabled": true,
+				"rules": {
+					"recommended": true,
+					"style": {
+						"noNonNullAssertion": "off"
+					}
+				}
+			}
+		},
+		{
+			"include": ["./**/*.tsx"],
+			"formatter": {
+				"indentWidth": 2,
+				"indentStyle": "space",
+				"formatWithErrors": true,
+				"enabled": true,
+				"lineWidth": 120,
+				"attributePosition": "multiline"
+			}
+		}
+	]
 }
