--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,31 @@
 {
-    "compilerOptions": {
-        "jsx": "react-jsx",
-        "jsxImportSource": "hono/jsx",
-        "target": "ESNext",
-        "lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
-        "module": "ESNext",
-        "strict": true,
-        "noEmit": true,
-        "moduleResolution": "Bundler",
-        "moduleDetection": "force",
-        "noUncheckedIndexedAccess": true,
-        "skipDefaultLibCheck": true,
-        "verbatimModuleSyntax": true,
-        "allowJs": true,
-        "skipLibCheck": true,
-        "preserveSymlinks": true,
-        "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "strictNullChecks": true
-    },
-    "include": [
-        "src/**/*.ts",
-        "__tests__/**/*.ts",
-        "scripts/**/*.ts",
-        "src/**/*.json",
-        "src/auth/*.tsx"
-    ],
-    "exclude": [
-        "node_modules",
-        "/Users/divinelight/code/utilities/cool-console"
-    ]
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"jsxImportSource": "hono/jsx",
+		"target": "ESNext",
+		"lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
+		"module": "ESNext",
+		"strict": true,
+		"noEmit": true,
+		"moduleResolution": "Bundler",
+		"moduleDetection": "force",
+		"noUncheckedIndexedAccess": true,
+		"skipDefaultLibCheck": true,
+		"verbatimModuleSyntax": true,
+		"allowJs": true,
+		"skipLibCheck": true,
+		"preserveSymlinks": true,
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"strictNullChecks": true
+	},
+	"include": [
+		"src/**/*.ts",
+		"__tests__/**/*.ts",
+		"scripts/**/*.ts",
+		"src/**/*.json",
+		"src/auth/*.tsx"
+	],
+	"exclude": ["node_modules", "/Users/divinelight/code/utilities/cool-console"]
 }
