chore: update environment variables and clean up code
- Added JWT_SECRET to .env.example
- Removed TODO.md and migrated tasks to README.md
- Renamed and reorganized various scripts for clarity
- Updated biome schema version and cleaned up config
- Refactored code to use more concise property declarations

Note: Less is more, but I guess in your case, more is less!

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ API_BASE_URL="https://services.leadconnectorhq.com"
 # Convenient redirect URL for local development. Just put your function handlder on this route
 REDIRECT_URL="http://localhost:3000/auth/callback"
 
-# SSO Key from HighLevel marketplace account
-SSO_KEY=""
-
 # Your APP ID - in the URL for your app in HighLevel marketplace
 # https://marketplace.gohighlevel.com/apps/<YOUR APP ID>/settings
 APP_ID=""
+
+# JWT Secret for signing tokens
+JWT_SECRET=""
