--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
 	},
 	"type": "module",
 	"scripts": {
-		"generate:api": "bun 'scripts/api.gen.ts' -- generate",
-		"generate:client": "bun 'scripts/client.build.ts'",
-		"generate:scopes": "bun 'scripts/scopes.gen.ts'",
+		"generate-api": "bun 'scripts/api.gen.ts' -- generate",
+		"generate-client": "bun 'scripts/client.build.ts'",
+		"generate-schemas": "bun 'scripts/generate-schemas.ts'",
+		"generate:schemas": "bun 'scripts/generate-schemas.ts'",
+		"generate-scopes": "bun 'scripts/scopes.gen.ts'",
 		"build": "bun run generate:client && bun run package",
 		"package": "tsc -p tsconfig.build.json",
-		"start:auth": "bun --hot run src/auth/index.tsx",
+		"start-auth": "bun --hot run src/auth/index.tsx",
 		"lint": "biome check . --write --unsafe",
 		"tsc": "tsc",
-		"start:test": "bun test --hot",
-		"debug:auth": "bun --inspect-brk run src/auth/index.tsx"
+		"start-test": "bun test --hot",
+		"debug-auth": "bun --inspect-brk run src/auth/index.tsx"
 	},
 	"dependencies": {
 		"hono": "^4.5.5",
@@ -34,11 +36,12 @@
 	},
 	"devDependencies": {
 		"@apidevtools/swagger-parser": "^10.1.0",
-		"@biomejs/biome": "^1.8.3",
+		"@biomejs/biome": "^1.9.2",
 		"@redocly/cli": "latest",
 		"@types/bun": "^1.1.6",
 		"@types/js-yaml": "^4.0.9",
 		"js-yaml": "^4.1.0",
+		"lefthook": "^1.7.17",
 		"openapi-fetch": "^0.8.2",
 		"openapi-typescript": "7.0.0-next.7",
 		"typescript": "^5.5.4"
