feat: new schemas added. update paths and reorganize file structure and file names.

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 	},
 	"type": "module",
 	"scripts": {
-		"generate-api": "bun 'scripts/api.gen.ts' -- generate",
-		"generate-client": "bun 'scripts/client.build.ts'",
+		"generate-api": "bun 'scripts/generate-api.ts' -- generate",
+		"generate-client": "bun 'scripts/generate-client.ts'",
 		"generate-schemas": "bun 'scripts/generate-schemas.ts'",
-		"generate-scopes": "bun 'scripts/scopes.gen.ts'",
-		"build": "bun run generate:client && bun run package",
+		"generate-scopes": "bun 'scripts/generate-scopes.ts'",
+		"build": "bun run generate-client && bun run package",
 		"package": "tsc -p tsconfig.build.json",
 		"start-auth": "bun --hot run src/auth/index.tsx",
 		"lint": "biome check . --write --unsafe",
