--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -8,7 +8,7 @@
 	"private": false,
 	"scripts": {
 		"debug-auth": "bun --inspect-brk run src/index.tsx",
-		"dev": "bun run src/index.ts"
+		"dev": "bun --hot src/index.tsx"
 	},
 	"version": "0.0.1"
 }
