chore: add .npmignore and clean up package.json for better releases
Looks like your code was getting a bit too cozy with unnecessary files. Now it's dressed up for success!

--- a/.release-it.json
+++ b/.release-it.json
@@ -15,10 +15,10 @@
 	},
 	"npm": {
 		"access": "public",
+		"allowSameVersion": true,
 		"publish": true,
 		"publishConfig": {
 			"registry": "https://registry.npmjs.org/"
-		},
-		"publishArgs": [""]
+		}
 	}
 }
