chore: update package.json with new devDependency and fix path resolution
Looks like your code was trying to resolve paths the hard way, but we got it sorted out.

--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -10,5 +10,8 @@
 		"debug-auth": "bun --inspect-brk run src/index.tsx",
 		"dev": "bun --hot src/index.tsx"
 	},
-	"version": "0.0.1"
+	"version": "0.0.1",
+	"devDependencies": {
+		"@types/bun": "^1.1.11"
+	}
 }
