--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@gnosticdev/highlevel-sdk",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"author": {
 		"name": "gnosticdev",
 		"url": "https://github.com/gnosticdev"
@@ -55,7 +55,11 @@
 		}
 	},
 	"description": "SDK for the HighLevel API",
-	"files": ["dist", "README.md", "LICENSE"],
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE"
+	],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
