feat: add all endpoints to the SDK client. improve error handling in auth flow. Update auth example.
- Keeping base endpoints client from openapi-fetch, so they can be customized if needed
- Refactored error handling in the OAuth callback to provide clearer feedback
- Updated client initialization to streamline endpoint access

--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -3,15 +3,16 @@
 		"@gnosticdev/highlevel-sdk": "file:../..",
 		"hono": "^4.6.3"
 	},
+	"devDependencies": {
+		"@types/bun": "^1.1.11"
+	},
 	"license": "MIT",
 	"name": "@gnosticdev/highlevel-bun-auth",
 	"private": false,
 	"scripts": {
+		"clean-install": "rm -rf node_modules && bun install",
 		"debug-auth": "bun --inspect-brk run src/index.tsx",
 		"dev": "bun --hot src/index.tsx"
 	},
-	"version": "0.0.1",
-	"devDependencies": {
-		"@types/bun": "^1.1.11"
-	}
+	"version": "0.0.1"
 }
