fix: update imports and refactor OAuth configuration for clarity
This commit improves the structure of the OAuth client configuration by updating import paths and renaming types for better clarity. It also simplifies some method calls, because who doesn't love a little less typing? Keep it clean, right?

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
 			"import": "./dist/index.js",
 			"types": "./dist/index.d.ts"
 		},
+		"./config": {
+			"default": "./dist/client-config.js",
+			"import": "./dist/client-config.js",
+			"types": "./dist/client-config.d.ts"
+		},
 		"./webhooks": {
 			"default": "./dist/webhooks.js",
 			"import": "./dist/webhooks.js",
@@ -38,6 +43,11 @@
 			"default": "./dist/oauth.js",
 			"import": "./dist/oauth.js",
 			"types": "./dist/oauth.d.ts"
+		},
+		"./oauth-config": {
+			"default": "./dist/oauth-config.js",
+			"import": "./dist/oauth-config.js",
+			"types": "./dist/oauth-config.d.ts"
 		},
 		"./scopes": {
 			"default": "./dist/scopes.js",
