feature: add v1 api types. update clients, add tests

--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@gnosticdev/highlevel-sdk": "file:../..",
+		"@gnosticdev/highlevel-sdk": "file:../../",
 		"hono": "^4.6.3"
 	},
 	"devDependencies": {
