--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,8 @@
 			"**/_![__tests__]",
 			"dist",
 			".wrangler",
-			".vscode"
+			".vscode",
+			"schemas/v1/postman.json"
 		],
 		"include": ["**/*[.js,.jsx,.ts,.tsx,.astro,.css,.json,.jsonc]"]
 	},
